[package]
name = "rust-image-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["png", "webp", "jpeg"] }
open = "5.1.4"
pdfium-render = "0.7"
rfd = "0.14.1"
webp = "0.3.0"
